<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/framelayout_below"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="200px"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/menu_title_pic"
            android:layout_width="fill_parent"
            android:layout_height="200px"
            android:background="@drawable/menu_title_pic01"
            android:minHeight="200px"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="200px"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#ff000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:textColor="#f2f2f2"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:shadowColor="#ff000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:textColor="#f2f2f2"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_tempDetail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#ff000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:textColor="#f2f2f2"
                android:textSize="20sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/menu_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/menu_linear_list"
            style="@style/Menu_Linear_Style" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_icon_list" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/menu_linear_notelist" />
        </LinearLayout>

        <View style="@style/Linear_Divide_Top" />

        <View style="@style/Linear_Divide_Btm" />

        <LinearLayout
            android:id="@+id/menu_linear_settings"
            style="@style/Menu_Linear_Style" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_icon_settings" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/menu_linear_settings" />
        </LinearLayout>

        <View style="@style/Linear_Divide_Top" />

        <View style="@style/Linear_Divide_Btm" />

        <LinearLayout
            android:id="@+id/menu_linear_feedback"
            style="@style/Menu_Linear_Style" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_icon_feedback" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/menu_linear_feedback" />
        </LinearLayout>

        <View style="@style/Linear_Divide_Top" />

        <View style="@style/Linear_Divide_Btm" />

        <LinearLayout
            android:id="@+id/menu_linear_more"
            style="@style/Menu_Linear_Style" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_icon_more" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/menu_linear_more" />
        </LinearLayout>

        <View style="@style/Linear_Divide_Top" />

        <View style="@style/Linear_Divide_Btm" />

        <LinearLayout
            android:id="@+id/menu_linear_exit"
            style="@style/Menu_Linear_Style" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_icon_exit" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/menu_linear_exit" />
        </LinearLayout>

        <View style="@style/Linear_Divide_Top" />

        <View style="@style/Linear_Divide_Btm" />
    </LinearLayout>

</LinearLayout>