<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/menu_bg" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/login_txt_enter_pwd"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linear_circles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_no1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_circle_null" />

        <ImageView
            android:id="@+id/img_no2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:src="@drawable/login_circle_null" />

        <ImageView
            android:id="@+id/img_no3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:src="@drawable/login_circle_null" />

        <ImageView
            android:id="@+id/img_no4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:src="@drawable/login_circle_null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/img_btn_1"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_1" />

        <ImageButton
            android:id="@+id/img_btn_2"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_2" />

        <ImageButton
            android:id="@+id/img_btn_3"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/img_btn_4"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_4" />

        <ImageButton
            android:id="@+id/img_btn_5"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_5" />

        <ImageButton
            android:id="@+id/img_btn_6"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/img_btn_7"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_7" />

        <ImageButton
            android:id="@+id/img_btn_8"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_8" />

        <ImageButton
            android:id="@+id/img_btn_9"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/img_btn_0"
            style="@style/Num_Theme"
            android:src="@drawable/login_num_0" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:textSize="16sp"
        android:text="@string/login_txt_tips" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:text="@string/login_txt_forget_pwd"
            android:textColor="#3d3b3b"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/login_txt_delete_pwd"
            android:textColor="#3d3b3b"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>